
- Implement use of Quantity in the Quantity constructor (convert to specified units).
  (Issue #1231)
- Rename .readthedocs.yml to .readthedocs.yaml, update MANIFEST.in (Issue #1311)
- Fix a few small typos.
  (Issue #1308)
- Fix babel format for `Unit`.
  (Issue #1085)
- Fix handling of positional max/min arguments in clip function.
  (Issue #1244)
- Fix string formatting of numpy array scalars

### Breaking Changes

- pint no longer supports Python 3.6
- Minimum Numpy version supported is 1.17+


0.17 (2021-03-22)
-----------------

- Add the Wh unit for battery capacity measurements
  (PR #1260, thanks Maciej Grela)
- Fix issue with reducable dimensionless units when using power (Quantity**ndarray)
  (Issue #1185)
- Fix comparisons between Quantities and Measurements.
  (Issue #1134, thanks lewisamarshall)
- UnitsContainer returns false if other is str and cannnot be parsed
  (Issue #1179, thanks rfrowe)
- Fix numpy.linalg.solve unit output. (Issue #1246)
- Support numpy.lib.stride_tricks.sliding_window_view. (Issue #1255)
- NEP29 Support docs.
- Move all tests to pytest.
- Fix to __pow__ and __ipow__
- Migrate to Github Actions.
  (Issue #1236)
- Update linter to use pre-commit.
- Quantity comparisons now ensure other is Quantity.
- Add sign function compatibility.
  (thanks Robin Tesse)
- Fix scalar to ndarray tolist.
- Fix tolist function with scalar ndarray.
  (Issue #1195, thanks jules-ch)
- Corrected typos and dacstrings
- Implements a first benchmark suite in airspeed velocity (asv). 
- Power for pseudo-dimensionless units.
  (Issue #1185, thanks Kevin Fuhr)

0.16.1 (2020-09-22)
-------------------

- Fix unpickling, now it is using the APP_REGISTRY as expected.
  (Issue #1175)

0.16 (2020-09-13)
-----------------

- Fixed issue where performing an operation of a Quantity with certain units would perform an in-place
  unit conversion that modified the operand in addition to the returned value (Issues #1102 & #1144)